# customer-support-env-project

./: .gitignore  Dockerfile  OPENAI_SETUP.md  README.md  api.py  auto_run.py  env.py  gradio_app.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
env/: __init__.py  environment.py  grader.py  models.py  tasks.py
server/: __init__.py  app.py  models.py
