[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

[project]
name = "customer-support-env"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "python-dotenv",
    "pyyaml",
    "pydantic"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*"]
